2001-03-31  Dave Peticolas  <dave@krondo.com>

	* src/scm/report.scm: translate report name

	* src/gnome/window-main.c: fix some i18n bugs

2001-03-31  Christian Stimming  <stimming@tuhh.de>

	* src/scm/html-utilities.scm (gnc:html-build-acct-table): fix
	horizontal line width if foreign currencies are shown.  

2001-03-31  Dave Peticolas  <dave@krondo.com>

	* src/scm/options.scm: add a text option type

	* src/gnome/dialog-options.c: add support for text options

	* src/gnome/window-main.c (gnc_ui_about_cb): set parent

	* src/scm/report/register.scm: more work

	* src/scm/html-document.scm: fix bug

2001-03-30  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/average-balance.scm: tweak default accounts

	* src/scm/html-utilities.scm (gnc:html-build-acct-table):
	put in a horizontal line before grand total.

	* src/gnome/dialog-tax-info.c: use form & description, not
	code & form, in clist. more work on display.

	* src/scm/report/txf-export.scm: fix bug

	* src/register/gnome/gnucash-sheet.c
	(gnucash_sheet_modify_current_cell): reset item edit position

	* src/register/gnome/gnucash-item-edit.c (item_edit_reset_offset):
	new func

	* src/gnome/gnc-currency-edit.c (add_item): don't use namespace
	in string

	* src/quotes/finance-quote-helper.in: check for non-standard
	Perl modules

	* src/quotes/Makefile.am: add update-finance-quote

	* src/quotes/update-finance-quote.in: new file

	* src/guile/guile-util.c: new funcs for wrapping price lists

	* src/guile/gnc.gwp: wrap more pricedb api. g-wrap price lists.

	* src/gnome/dialog-tax-info.c: more work

	* src/gnc-ui-util.c (gnc_push_locale): new func
	(gnc_pop_locale): new func

	* src/gnome/gnc-html-guppi.c: use C locale when parsing doubles

	* src/gnc-ui-util.c (gnc_lconv_set): strdup value to make
	sure changing the locale doesn't affect the cached value

	* src/gnome/window-register.c: make 'record' work like 'enter'

	* src/scm/prefs.scm: add internal prefs for tax window size
